# docs/swagger.yaml
@@ -24,6 +24,24 @@ definitions:
       size:
         type: integer
     type: object
+  dto.PaymentNotificationDto:
+    properties:
+      is_checked:
+        type: boolean
+      role_id:
+        type: string
+    required:
+    - role_id
+    type: object
+  dto.RoleAccessDto:
+    properties:
+      is_checked:
+        type: boolean
+      role_id:
+        type: string
+    required:
+    - role_id
+    type: object
   helper.ReactSelectRequest:
     properties:
       field:
@@ -177,6 +195,10 @@ definitions:
         type: string
       entity_id:
         type: string
+      has_dashboard_access:
+        type: boolean
+      has_full_access:
+        type: boolean
       id:
         type: string
       is_active:
@@ -235,43 +257,6 @@ definitions:
     required:
     - application_user_id
     - role_id
-    type: object
-  models.RoleNotification:
-    properties:
-      approved_at:
-        type: string
-      approved_by:
-        type: string
-      created_at:
-        type: string
-      created_by:
-        type: string
-      entity_id:
-        type: string
-      has_payment_notification:
-        type: boolean
-      id:
-        type: string
-      is_active:
-        type: boolean
-      is_default:
-        type: boolean
-      is_locked:
-        type: boolean
-      owner_id:
-        type: string
-      payment_notification_type:
-        type: string
-      role_id:
-        type: string
-      submitted_at:
-        type: string
-      submitted_by:
-        type: string
-      updated_at:
-        type: string
-      updated_by:
-        type: string
     type: object
   models.Sector:
     properties:
@@ -902,17 +887,16 @@ paths:
       - BearerAuth: []
       tags:
       - Role
-  /role/notification/configuration:
-    post:
+  /role/notification/getByRoleId/{roleId}:
+    get:
       consumes:
       - application/json
       parameters:
-      - description: request
-        in: body
-        name: body
+      - description: roleId
+        in: path
+        name: roleId
         required: true
-        schema:
-          $ref: '#/definitions/models.RoleNotification'
+        type: string
       produces:
       - application/json
       responses:
@@ -947,6 +931,108 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/models.Role'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            type: object
+      security:
+      - BearerAuth: []
+      tags:
+      - Role
+  /role/set/dashboardAccess:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: request
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RoleAccessDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            type: object
+      security:
+      - BearerAuth: []
+      tags:
+      - Role
+  /role/set/fullAccess:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: request
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RoleAccessDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            type: object
+      security:
+      - BearerAuth: []
+      tags:
+      - Role
+  /role/set/paymentNotification:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: request
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.PaymentNotificationDto'
       produces:
       - application/json
       responses:
