# dto/role-dto.go
@@ -1,13 +1,16 @@
 package dto
 
-import "github.com/gin-gonic/gin"
+type RoleAccessDto struct {
+	RoleId    string `json:"role_id" binding:"required"`
+	IsChecked bool   `json:"is_checked"`
+}
 
-//-- RoleDto is a model that client use when updating a book
-type RoleDto struct {
-	Id          string `json:"id" form:"id"`
-	Name        string `json:"name" form:"name" binding:"required"`
-	Description string `json:"description" form:"description"`
-	EntityId    string `json:"-"`
-	CreatedBy   string `json:"-"`
-	Context     *gin.Context
+type RoleNotificationDto struct {
+	RoleId           string    `json:"role_id" binding:"required"`
+	NotificationName *[]string `json:"notification_name"`
+}
+
+type PaymentNotificationDto struct {
+	RoleId    string `json:"role_id" binding:"required"`
+	IsChecked bool   `json:"is_checked"`
 }
